deployment-multi-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-containers
spec:
  replicas: 3
  selector:
    matchLabels:
      app: two-containers
  template:
    metadata:
      labels:
        app: two-containers
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: network-multitool
        image: wbitt/network-multitool
