service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: two-containers
  ports:
    - name: nginx
      port: 9001
      protocol: TCP
      targetPort: 80
    - name: multitool
      port: 9002
      targetPort: 1180
