service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-nodeport
spec:
  type: NodePort
  selector:
    app: two-containers
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30080
